<resources>
    <string name="app_name">YandexMapKit</string>
    <string name="new_place">New Place</string>
    <string name="name_place">name place</string>
    <string name="description">description</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="favorites_places">Favorites Places</string>
</resources>